Fix spacing

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ a {
 
 .sub-title {
     border-top: 0.1rem solid #fff;
-    padding: 1rem 4rem;
+    padding: 0 4rem;
     text-align: center;
 }
 
